# kx

./: .clang-format  Cargo.toml  README.md  flake.nix  high-level-plan.md
kx-editor/: Cargo.toml
kx-editor/src/: main.rs
kx-engine/: Cargo.toml  build.rs
kx-engine/shaders/: clear.cs.hlsl  clear.hlsl  triangle.ms.hlsl  triangle.ps.hlsl
kx-engine/src/graphics/: mod.rs
kx-engine/src/graphics/core/: command_buffer.rs  descriptor.rs  device.rs  image.rs  instance.rs  mod.rs  pipeline.rs  shader.rs  swapchain.rs
kx-engine/src/graphics/frame_graph/: clear.rs  mod.rs  triangle.rs
kx-engine/src/graphics/pass/: clear.rs  mod.rs
kx-engine/src/renderer/: command_buffer.rs  context.rs  image.rs  mod.rs  shader.rs
