[package]
name = "kx-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true

kx-engine = { path = "../kx-engine" }
winit = { version = "0.30", features = ["rwh_06"] }
meshopt = "0.6"
gltf = "1.4"

egui = "0.33"
egui-ash-renderer = { version = "0.11", features = [
    "gpu-allocator",
    "dynamic-rendering",
] }
egui_dock = "0.18"
egui-notify = "0.21"
transform-gizmo-egui = "0.8"
